# Digital_Video_Recorder_DVR-TT01

ESP32/src/: CData.h  CommonData.cpp  CommonData.h  CommonDataType.cpp  CommonDataType.h  CommonLibrary.cpp  CommonLibrary.h  (+6 more)
ESP32/src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.cpp  ui_events.h  ui_helpers.c  ui_helpers.h
ESP32/src/ui/components/: ui_comp_hook.c
ESP32/src/ui/images/: ui_img_adrenaline_png.c  ui_img_arrow_left_png.c  ui_img_battery_full_png.c  ui_img_battery_horiz_000_png.c  ui_img_battery_horiz_050_png.c  ui_img_battery_horiz_075_png.c  ui_img_battery_low_png.c  ui_img_beer_png.c  ui_img_blank_png.c  ui_img_burnerphone_png.c  ui_img_cancel_png.c  ui_img_cblank_png.c  ui_img_cchargeback_png.c  ui_img_cchargefront_png.c  ui_img_charge_png.c  ui_img_chargeback_png.c  ui_img_cigarette_png.c  ui_img_clive_png.c  ui_img_dart_board_png.c  ui_img_empty_bullet_png.c  ui_img_empty_png.c  ui_img_expiredmedicine_png.c  ui_img_handcuffs_png.c  ui_img_handsaw_png.c  ui_img_help_center_png.c  ui_img_inverter_png.c  ui_img_library_music_png.c  ui_img_live_png.c  ui_img_lock_png.c  ui_img_magnifyingglass_png.c  ui_img_metal_bullet_box_png.c  ui_img_metal_table_png.c  ui_img_party_popper_png.c  ui_img_pause_png.c  ui_img_picking_png.c  ui_img_play_png.c  ui_img_shotgun_block_png.c  ui_img_shotgun_in_hand_png.c  ui_img_shotgun_png.c  ui_img_shotguncut_png.c  (+7 more)
ESP32/src/ui/screens/: ui_Info.c  ui_Info.h  ui_Main.c  ui_Main.h  ui_Music.c  ui_Music.h  ui_Start.c  ui_Start.h
Project/: Buckshot_Roulette_Project.sll  Buckshot_Roulette_Project.spj  Buckshot_Roulette_Project_events.py  DVR-TT01.sll  DVR-TT01.spj  DVR-TT01_events.py
Simulator/: LVGL.sln
(+79 files in other folders)
